# rhythmbox-discord-rpc

./: .gitmodules  README.md  build.sh  default.nix  deps.list  meson.build  plugin.cpp  rb_headers.h  rhythmbox-discord-v2.plugin  track.cpp  track.hpp  upload.cpp  upload.hpp
.github/workflows/: build-debug.yml
